// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - harvest allocates fee to operator when delta is above zero 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 63434,
}
`;

exports[`EthVault - harvest applies penalty when delta is below zero 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32137,
}
`;
